Added images and linked in HTML

--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
 
 </body>
 </html>
+<img src="img/naziv_slike.jpg" alt="Opis slike">
+<img src="img/logo.png" alt="STvornica logo">
+<img src="img/hero.jpg" alt="Futuristic digital illustration">
 
 
