Added logo and hero image properly

--- a/index.html
+++ b/index.html
@@ -40,10 +40,39 @@
     <p>Get in touch: <a href="mailto:info@stvornica.agency">info@stvornica.agency</a></p>
   </footer>
 
-</body>
-</html>
-<img src="img/naziv_slike.jpg" alt="Opis slike">
-<img src="img/logo.png" alt="STvornica logo">
-<img src="img/hero.jpg" alt="Futuristic digital illustration">
+  <body>
+
+    <!-- HERO section -->
+    <header class="hero">
+      <img src="img/logo.png" alt="STvornica logo" class="logo">
+      <h1>STvornica</h1>
+      <p>The digital agency of the future.</p>
+      <img src="img/hero.jpg" alt="Futuristic digital illustration" class="hero-image">
+    </header>
+  
+    <!-- SERVICES section -->
+    <section class="services">
+      <h2>What we do</h2>
+      <ul>
+        <li>Modern website development</li>
+        <li>Branding & visual identity</li>
+        <li>Digital strategy and campaigns</li>
+      </ul>
+    </section>
+  
+    <!-- ABOUT section -->
+    <section class="about">
+      <h2>Who we are</h2>
+      <p>We are a team of creatives, designers and strategists building digital brands that stand out.</p>
+    </section>
+  
+    <!-- CONTACT section -->
+    <footer class="contact">
+      <p>Get in touch: <a href="mailto:info@stvornica.agency">info@stvornica.agency</a></p>
+    </footer>
+  
+  </body>
+  </html>
+  
 
 
