Updated contact email to stvornica.com

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <!-- CONTACT section -->
   <footer class="contact">
-    <p>Get in touch: <a href="mailto:info@stvornica.agency">info@stvornica.agency</a></p>
+    <p>Get in touch: <a href="mailto:info@stvornica.com">info@stvornica.com</a></p>
   </footer>
 
 </body>
