Restored logo and hero images in header

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 </head>
 <body>
 
-  <!-- HERO section -->
-  <header class="hero">
+<!-- HERO section -->
+<header class="hero">
+    <img src="img/logo.png" alt="STvornica logo" class="logo">
     <h1>STvornica</h1>
     <p>The digital agency of the future.</p>
+    <img src="img/hero.jpg" alt="Futuristic digital illustration" class="hero-image">
   </header>
+  
 
   <!-- SERVICES section -->
   <section class="services">
