--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 </head>
 <body>
 
-<!-- HERO section -->
-<header class="hero">
-    <img src="img/logo.png" alt="STvornica logo" class="logo">
-    <h1>STvornica</h1>
-    <p>The digital agency of the future.</p>
-    <img src="img/hero.jpg" alt="Futuristic digital illustration" class="hero-image">
+  <!-- HERO section -->
+  <header class="hero">
+    <div class="hero-top">
+      <img src="img/logo.png" alt="STvornica logo" class="logo">
+      <h1>STvornica</h1>
+      <p>The digital agency of the future.</p>
+    </div>
+    <div class="hero-image-wrap">
+      <img src="img/hero.jpg" alt="Futuristic digital illustration" class="hero-image">
+    </div>
   </header>
-  
 
   <!-- SERVICES section -->
   <section class="services">
@@ -38,13 +41,31 @@
     <p>We are a team of creatives, designers and strategists building digital brands that stand out.</p>
   </section>
 
-  <!-- CONTACT section -->
+  <!-- CONTACT + SOCIAL -->
   <footer class="contact">
     <p>Get in touch: <a href="mailto:info@stvornica.com">info@stvornica.com</a></p>
+    <div class="social-icons">
+      <a href="https://www.instagram.com/stvornica" target="_blank" aria-label="Instagram">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2Zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5A4.25 4.25 0 0 0 20.5 16.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5Zm8.75 2.75a.75.75 0 0 1 .75.75v1a.75.75 0 0 1-1.5 0v-1a.75.75 0 0 1 .75-.75ZM12 7a5 5 0 1 1 0 10a5 5 0 0 1 0-10Zm0 1.5a3.5 3.5 0 1 0 0 7a3.5 3.5 0 0 0 0-7Z"/>
+        </svg>
+      </a>
+      <a href="https://www.linkedin.com/company/stvornica" target="_blank" aria-label="LinkedIn">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M4.98 3.5C4.98 4.6 4.08 5.5 2.98 5.5S1 4.6 1 3.5S1.9 1.5 3 1.5s1.98.9 1.98 2Zm.02 4H1V23h4V7.5Zm7.5 0H9v15.5h4V15c0-3.2 4-3.5 4 0v8h4v-8.5c0-6-6.5-5.8-8-2.8V7.5Z"/>
+        </svg>
+      </a>
+      <a href="mailto:info@stvornica.com" aria-label="Email">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M2 5a3 3 0 0 1 3-3h14a3 3 0 0 1 3 3v1.2l-10 6.25L2 6.2V5Zm0 3.867V19a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3V8.867l-9.6 6a1 1 0 0 1-1.066 0L2 8.867Z"/>
+        </svg>
+      </a>
+    </div>
   </footer>
 
 </body>
 </html>
+
 
   
 
