Updated layout and styles for hero, blog and social icons

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="STvornica is a digital agency shaping brands through strategy, design and technology.">
   <title>STvornica</title>
 
   <!-- Google Font -->
@@ -39,6 +40,27 @@
   <section class="about">
     <h2>Who we are</h2>
     <p>We are a team of creatives, designers and strategists building digital brands that stand out.</p>
+  </section>
+
+<!-- BLOG section -->
+<section class="blog">
+    <h2>Insights</h2>
+  
+    <div class="blog-grid">
+      <article class="blog-post">
+        <h3>Why every brand needs a strong digital presence</h3>
+        <p class="blog-date">March 2025</p>
+        <p>In a world driven by attention, design and digital clarity make the difference between noise and impact.</p>
+        <a href="#" class="read-more">Read more →</a>
+      </article>
+  
+      <article class="blog-post">
+        <h3>Designing for Gen Z: What actually matters</h3>
+        <p class="blog-date">February 2025</p>
+        <p>Authenticity beats perfection. Here’s how to rethink your visual strategy for the new wave of consumers.</p>
+        <a href="#" class="read-more">Read more →</a>
+      </article>
+    </div>
   </section>
 
   <!-- CONTACT + SOCIAL -->
