Renamed blog section from 'Insights' to 'Blog'

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <!-- BLOG section -->
 <section class="blog">
-    <h2>Insights</h2>
+    <h2>Blog</h2>
   
     <div class="blog-grid">
       <article class="blog-post">
