--- a/index.html
+++ b/index.html
@@ -3,19 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="STvornica is a digital agency shaping brands through strategy, design and technology.">
   <title>STvornica</title>
 
-  <!-- Google Font -->
+  <!-- Fonts and Styles -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-
-  <!-- Link to CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+  <!-- NAVIGATION -->
+  <nav class="navbar">
+    <div class="nav-container">
+      <a href="#hero" class="nav-logo">STvornica</a>
+      <div class="nav-toggle" id="navToggle">
+        <span></span><span></span><span></span>
+      </div>
+      <ul class="nav-menu" id="navMenu">
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
   <!-- HERO section -->
-  <header class="hero">
+  <header class="hero" id="hero">
     <div class="hero-top">
       <img src="img/logo.png" alt="STvornica logo" class="logo">
       <h1>STvornica</h1>
@@ -27,7 +42,7 @@
   </header>
 
   <!-- SERVICES section -->
-  <section class="services">
+  <section class="services" id="services">
     <h2>What we do</h2>
     <ul>
       <li>Modern website development</li>
@@ -37,56 +52,73 @@
   </section>
 
   <!-- ABOUT section -->
-  <section class="about">
+  <section class="about" id="about">
     <h2>Who we are</h2>
     <p>We are a team of creatives, designers and strategists building digital brands that stand out.</p>
   </section>
 
-<!-- BLOG section -->
-<section class="blog">
+  <!-- BLOG section -->
+  <section class="blog" id="blog">
     <h2>Blog</h2>
-  
     <div class="blog-grid">
       <article class="blog-post">
         <h3>Why every brand needs a strong digital presence</h3>
         <p class="blog-date">March 2025</p>
-        <p>In a world driven by attention, design and digital clarity make the difference between noise and impact.</p>
-        <a href="#" class="read-more">Read more →</a>
-      </article>
-  
-      <article class="blog-post">
-        <h3>Designing for Gen Z: What actually matters</h3>
-        <p class="blog-date">February 2025</p>
-        <p>Authenticity beats perfection. Here’s how to rethink your visual strategy for the new wave of consumers.</p>
+        <p>Design and digital clarity make the difference between noise and impact.</p>
         <a href="#" class="read-more">Read more →</a>
       </article>
     </div>
   </section>
 
-  <!-- CONTACT + SOCIAL -->
-  <footer class="contact">
-    <p>Get in touch: <a href="mailto:info@stvornica.com">info@stvornica.com</a></p>
+  <!-- PORTFOLIO section -->
+  <section class="portfolio" id="portfolio">
+    <h2>Our Work</h2>
+    <div class="portfolio-grid">
+      <div class="portfolio-item">
+        <img src="img/project1.jpg" alt="Project 1">
+        <h3>Brand Identity for Nova</h3>
+      </div>
+      <div class="portfolio-item">
+        <img src="img/project2.jpg" alt="Project 2">
+        <h3>Website for Tekfinity</h3>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACT section -->
+  <section class="contact" id="contact">
+    <h2>Contact Us</h2>
+    <form action="https://formspree.io/f/yourcode" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <p>&copy; 2025 STvornica. All rights reserved.</p>
     <div class="social-icons">
       <a href="https://www.instagram.com/stvornica" target="_blank" aria-label="Instagram">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2Zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5A4.25 4.25 0 0 0 20.5 16.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5Zm8.75 2.75a.75.75 0 0 1 .75.75v1a.75.75 0 0 1-1.5 0v-1a.75.75 0 0 1 .75-.75ZM12 7a5 5 0 1 1 0 10a5 5 0 0 1 0-10Zm0 1.5a3.5 3.5 0 1 0 0 7a3.5 3.5 0 0 0 0-7Z"/>
-        </svg>
-      </a>
-      <a href="https://www.linkedin.com/company/stvornica" target="_blank" aria-label="LinkedIn">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M4.98 3.5C4.98 4.6 4.08 5.5 2.98 5.5S1 4.6 1 3.5S1.9 1.5 3 1.5s1.98.9 1.98 2Zm.02 4H1V23h4V7.5Zm7.5 0H9v15.5h4V15c0-3.2 4-3.5 4 0v8h4v-8.5c0-6-6.5-5.8-8-2.8V7.5Z"/>
-        </svg>
-      </a>
-      <a href="mailto:info@stvornica.com" aria-label="Email">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M2 5a3 3 0 0 1 3-3h14a3 3 0 0 1 3 3v1.2l-10 6.25L2 6.2V5Zm0 3.867V19a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3V8.867l-9.6 6a1 1 0 0 1-1.066 0L2 8.867Z"/>
+          <path d="M7.75 2h8.5A5.75..."/>
         </svg>
       </a>
     </div>
   </footer>
 
+  <!-- SCRIPT: Hamburger Menu -->
+  <script>
+    const navToggle = document.getElementById('navToggle');
+    const navMenu = document.getElementById('navMenu');
+    navToggle.addEventListener('click', () => {
+      navMenu.classList.toggle('active');
+    });
+  </script>
 </body>
 </html>
+
 
 
   
