--- a/index.html
+++ b/index.html
@@ -52,7 +52,65 @@
     </div>
   </header>
 
-  <!-- SERVICES, ABOUT, BLOG, PORTFOLIO... (ostaju isti) -->
+  <!-- SERVICES section -->
+  <section class="services" id="services">
+    <h2>What we do</h2>
+    <ul>
+      <li>Modern website development</li>
+      <li>Branding & visual identity</li>
+      <li>Digital strategy and campaigns</li>
+    </ul>
+  </section>
+
+  <!-- ABOUT section -->
+  <section class="about" id="about">
+    <h2>Who we are</h2>
+    <p>We are a team of creatives, designers and strategists building digital brands that stand out.</p>
+  </section>
+
+  <!-- BLOG section -->
+  <section class="blog" id="blog">
+    <h2>Blog</h2>
+    <div class="blog-grid">
+      <article class="blog-post">
+        <h3>Why every brand needs a strong digital presence</h3>
+        <p class="blog-date">March 2025</p>
+        <p>Design and digital clarity make the difference between noise and impact.</p>
+        <a href="#" class="read-more">Read more →</a>
+      </article>
+      <article class="blog-post">
+        <h3>Designing for Gen Z: What actually matters</h3>
+        <p class="blog-date">February 2025</p>
+        <p>Authenticity beats perfection. Here’s how to rethink your visual strategy for the new wave of consumers.</p>
+        <a href="#" class="read-more">Read more →</a>
+      </article>
+    </div>
+  </section>
+
+  <!-- PORTFOLIO section -->
+  <section class="portfolio" id="portfolio">
+    <h2>Our Work</h2>
+    <div class="portfolio-filters">
+      <button data-filter="all">All</button>
+      <button data-filter="branding">Branding</button>
+      <button data-filter="web">Web</button>
+      <button data-filter="strategy">Strategy</button>
+    </div>
+    <div class="portfolio-grid">
+      <div class="portfolio-item" data-category="branding">
+        <img src="img/project1.jpg" alt="Project 1">
+        <h3>Brand Identity for Nova</h3>
+      </div>
+      <div class="portfolio-item" data-category="web">
+        <img src="img/project2.jpg" alt="Project 2">
+        <h3>Website for Tekfinity</h3>
+      </div>
+      <div class="portfolio-item" data-category="strategy">
+        <img src="img/project3.jpg" alt="Project 3">
+        <h3>Marketing Plan for Optix</h3>
+      </div>
+    </div>
+  </section>
 
   <!-- CONTACT section -->
   <section class="contact" id="contact">
@@ -83,14 +141,12 @@
 
   <!-- SCRIPTS -->
   <script>
-    // Hamburger Menu
     const navToggle = document.getElementById('navToggle');
     const navMenu = document.getElementById('navMenu');
     navToggle.addEventListener('click', () => {
       navMenu.classList.toggle('active');
     });
 
-    // Portfolio Filters
     const filterButtons = document.querySelectorAll('[data-filter]');
     const portfolioItems = document.querySelectorAll('.portfolio-item');
     filterButtons.forEach(button => {
@@ -103,7 +159,6 @@
       });
     });
 
-    // Scroll to top
     const scrollToTopBtn = document.getElementById("scrollToTopBtn");
     window.onscroll = function () {
       scrollToTopBtn.style.display = window.scrollY > 300 ? "block" : "none";
@@ -112,7 +167,6 @@
       window.scrollTo({ top: 0, behavior: 'smooth' });
     }
 
-    // Thank-you Message
     function showThankYou(event) {
       event.preventDefault();
       const form = event.target;
