Added scroll button, thank-you message, SEO meta and favicon

--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
 
   <!-- Link to CSS -->
   <link rel="stylesheet" href="style.css">
+
+  <style>
+    #scrollToTopBtn {
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      background-color: #4ecdc4;
+      color: #fff;
+      border: none;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      font-size: 20px;
+      display: none;
+      cursor: pointer;
+      z-index: 999;
+      transition: background-color 0.3s ease;
+    }
+
+    #scrollToTopBtn:hover {
+      background-color: #38bfb1;
+    }
+  </style>
 </head>
 <body>
 
