Full HTML structure update with animated nav toggle

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- Link to CSS -->
   <link rel="stylesheet" href="style.css">
-
+  
   <style>
     #scrollToTopBtn {
       position: fixed;
@@ -168,6 +168,14 @@
     const navMenu = document.getElementById('navMenu');
     navToggle.addEventListener('click', () => {
       navMenu.classList.toggle('active');
+      navToggle.classList.toggle('active');
+    });
+
+    document.querySelectorAll('.nav-menu a').forEach(link => {
+      link.addEventListener('click', () => {
+        navMenu.classList.remove('active');
+        navToggle.classList.remove('active');
+      });
     });
 
     const filterButtons = document.querySelectorAll('[data-filter]');
@@ -197,15 +205,6 @@
       form.style.display = "none";
       thankYou.style.display = "block";
     }
-
-    // Zatvori meni kad klikneš na link
-document.querySelectorAll('.nav-menu a').forEach(link => {
-  link.addEventListener('click', () => {
-    navMenu.classList.remove('active');
-    navToggle.classList.remove('active');
-  });
-});
-
   </script>
 </body>
 </html>
